--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
 	implementation 'org.liquibase:liquibase-gradle-plugin:2.0.4'
 	implementation 'org.liquibase:liquibase-core:4.1.1'
 	compile group: 'org.liquibase', name: 'liquibase-core', version: '4.1.1'
