--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.path=/h2-console
 spring.liquibase.change-log=classpath:db/changelog/liquibase-changelog-master.xml
-#spring.jpa.hibernate.ddl-auto=none
-#spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.h2.console.enabled=true
+logging.config=log4j2.xml
